# imgext

./: README.md  logging.ini  requirements.txt  setup.cfg  setup.py
src/imgext/: __init__.py  __main__.py  imgext.py
