[metadata]
name = imgext
version = 0.1.0
author = Arnold Mokira & CodiTheck
author_email = dr.mokira@gmail.com
description = Image extration from document
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/CodiTheck/imgext
project_urls =
    repository = https://github.com/CodiTheck/imgext
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

keywords =
	image-extractor
	pdf
	document-analysis
	python


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requies =
	Pillow==10.0.0
	PyMuPDF==1.23.3
	tk=0.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tihttp = imgext.__main__:main

[options.extras_require]
dev =
	pytest
